--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "minimum-stability": "stable",
     "require": {
         "twig/twig": "^3.5.1",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "guzzlehttp/guzzle": "^7.5"
     },
     "require-dev": {
         "filp/whoops": "^2.15",
