--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "twig/twig": "^3.5.1",
         "ext-pdo": "*",
-        "guzzlehttp/guzzle": "^7.5"
+        "guzzlehttp/guzzle": "^7.5",
+        "symfony/http-client": "^6.2"
     },
     "require-dev": {
         "filp/whoops": "^2.15",
